Added download variant import endpoint and swagger
